<resources>
    <string name="app_name">CommunityApp</string>
    <string name="Name">Name</string>
    <string name="NameQ">What\'s your Name?</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Next">NEXT</string>
    <string name="DOB">Date of Birth</string>
    <string name="no">Enter your Mobile Number</string>
    <string name="password">Enter Password</string>
    <string name="password_text">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="OTP">Enter OTP</string>
    <string name="OTP_text">4 digits</string>
    <string name="OK">OK</string>
    <string name="phone_no">phone no.</string>
    <string name="log_in">Log In</string>
    <string name="log_in_with_otp">Log In with OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_the_registered_phone_number_to_recieve_notp">Enter the registered phone number to recieve\nOTP</string>
    <string name="Continue">continue</string>
    <string name="registered_number">Enter your registered number</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="button">Button</string>
    <string name="new_password">Enter OTP received and new password</string>
    <string name="init">+91</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Share_fragment">Share fragment</string>
    <string name="comments">comment</string>
    <string name="likes">likes</string>

</resources>