<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_password">

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:fontFamily="sans-serif"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:fontFamily="sans-serif"
        android:text="@string/Register"
        android:textColorHint="#F3F1F1" />

</RelativeLayout>