<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.communityapp.register.Register_name">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/Name"
        android:text="@string/NameQ"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/FirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Name"
        android:text="@string/FirstName"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/et_name"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/FirstName"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="@string/FirstName"
        android:ellipsize="start"
        android:fontFamily="sans-serif"

        android:hint="@string/FirstName"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/LastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Name"
        android:text="@string/LastName"
        android:textSize="20sp" />


    <EditText

        android:id="@+id/last_name"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/LastName"
        android:layout_marginStart="220dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/LastName"
        android:fontFamily="sans-serif"
        android:hint="@string/LastName"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:fontFamily="sans-serif"
        android:text="@string/Next"
        android:textColorHint="#F3F1F1" />

</RelativeLayout>